order调试BUG改动
Signed-off-by: MattOrinber <mengw@oupeng.com>